# sh23

./: .dir-locals.el  .gitignore  CMakeLists.txt  GNUmakefile  README.md  __makefile  configure.ac  sh23_visibility.h
.claude/: settings.local.json
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: _index.md  alias-substitution.md  arithmetic-expansion.md  build_guide.md  case-conditional.md  command-substitution.md  field-splitting.md  for-loop.md  grouping-commands.md  if-conditional.md  job-control.md  lists.md  parameter-expansion.md  parameters.md  pattern-matching.md  pipelines.md  portability.md  quoting.md  redirection-and-heredoc.md  reserved-words.md  shell-environment.md  shell-execution-environment.md  shell-grammar.md  shell-introduction.md  signals.md  symbol-index.md  tilde-expansion.md  token-recognition.md  variables.md  while-until.md
docs/: arithmetic-expansion.md  case-conditional.md  exit-status.md  field-splitting.md  for-loop.md  functions.md  grouping-commands.md  index.md  misra-notes.md  parameter-expansion.md  platform-overview.md  quoting.md  reserved-words.md  shell-introduction.md  simple-commands.md  string_usage_audit.md  symbol-index.md
docs/assets/css/: style.scss
include/: Makefile.am  migash.h
include/migash/: exec.h  frame.h  getopt.h  getopts.h  mgshconf.h.in  string_t.h  strlist.h  type_pub.h
m4/: Makefile.am  check_main_three_args.m4
packaging/: migash.spec.in
src/: .clang-format  Makefile.am  alias.c  alias.h  alias_array.c  alias_array.h  alias_store.c  alias_store.h  api.h  arithmetic.c  arithmetic.h  ast.c  ast.h  ast_grammar.c  ast_grammar.h  ast_lower.c  ast_lower.h  builtin_store.c  builtin_store.h  builtins.c  builtins.h  clean_files.sh  exec.c  exec.h  exec_command.c  exec_command.h  exec_compound.c  exec_compound.h  exec_control.c  exec_control.h  exec_expander.c  exec_expander.h  exec_frame.c  exec_frame.h  exec_frame_expander.c  exec_frame_expander.h  exec_frame_policy.h  exec_internal.h  exec_redirect.c  exec_redirect.h  (+121 more)
src/attic/: exec_compound.c  expander.c  expander.h
src/miga/: Makefile.am
test/: test_xalloc_ctest.c
test/ctest/: ctest.c  ctest.h
test/mgsh/: test_alias_ctest.c  test_alist_ctest.c  test_arithmetic_ctest.c  test_ast_ctest.c  test_ast_heredoc_ctest.c  test_exec_ctest.c  test_executor_ctest.c  test_expander_ctest.c  test_fd_table_ctest.c  test_func_store_ctest.c  test_getopt.c  test_getopt_ctest.c  test_job_store_ctest.c  test_lexer_arith_exp_ctest.c  test_lexer_cmd_subst_ctest.c  test_lexer_heredoc_ctest.c  test_lexer_param_exp_ctest.c  test_lexer_quote_ctest.c  test_lexer_quotes_ctest.c  test_parser_ctest.c  test_parser_gnode_ctest.c  test_pattern_removal_ctest.c  test_positional_params_ctest.c  test_sig_act_ctest.c  test_string_ctest.c  test_string_list_ctest.c  test_token_array_ctest.c  test_token_ctest.c  test_tokenizer_ctest.c  test_variable_store_ctest.c  test_xalloc_ctest.c  token_ctest.c
test/sh/: 01_single_quotes.sh  02_double_quotes.sh  03_backslash_escape.sh  06_command_substitution.sh  07_arithmetic_expansion.sh  09_quote_concatenation.sh  11_pathname_expansion.sh  12_reserved_words.sh  13_edge_cases.sh  15_case_statement.sh  16_alias_substitution.sh  17_positional_parameters.sh  README.md  run_tests.sh  test_helpers.sh
test/sh/tests/: 01_single_quotes.sh  02_double_quotes.sh  03_backslash_escape.sh  04_unquoted_special.sh  05_parameter_expansion.sh  06_command_substitution.sh  08_here_documents.sh  10_word_splitting.sh  11_pathname_expansion.sh  12_reserved_words.sh  13_edge_cases.sh  14_conditional_special.sh  recursive_math.sh  single_quote_newline.sh  test_basename_dirname.sh  test_helpers.sh  test_printf.sh  test_simple.sh
