nobase_nodist_pkginclude_HEADERS = \
    libmigash/mgshconf.h

nobase_pkginclude_HEADERS = \
    libmigash.h \
    libmigash/api.h \
    libmigash/exec.h \
    libmigash/frame.h \
    libmigash/getopt.h \
    libmigash/string_t.h \
    libmigash/strlist.h \
    libmigash/type_pub.h

EXTRA_DIST = \
    libmigash/mgshconf.h.in

BUILT_SOURCES = \
    libmigash/mgshconf.h
